// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - features - CardFoodit should test CardFoodit - variant day-recipe 1`] = `
<div>
  <div
    class="hidden"
  >
    <article
      class="card overflow-hidden relative h-100 w-100 max-w-1366 mx-auto --day-recipe bg-light-1"
      data-variant="day-recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container flex-column row-gap-0 column-gap-32 h-100 text-inherit flex-row_lg"
        data-variant="primary"
        href="/salados/pollo/receta-para-comer-mas-rico-con-pollito-2-nid18092023/"
        target="_self"
        title="Receta para comer mas rico con ...POLLITO 2"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://www.lanacion.com.ar/resizer/UGjxrx8lNRZ4UUUncPnYY8j_pTA=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
              <img
                class="image flex card-image ratio-3-2 w-100"
                decoding="async"
                fetchpriority="high"
                loading="eager"
                src="https://www.lanacion.com.ar/resizer/HYbSynyGCPurUAS4sNRW1i0qXyI=/768x0/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 jc-between gap-16 px-16 pb-16 pt-20 text-light-800 pr-64_lg max-w-483_lg"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <span
                class="text text-accent-tomate prumo prumo-medium text-16 uppercase"
              >
                Receta del día
              </span>
              <span
                class="text card-title prumo transition-regular prumo-book text-28 text-40_md text-48_lg"
              >
                Receta para comer mas rico con ...POLLITO 2
              </span>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 flex-row flex-column_lg ai-center ai-start_lg"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Foodit
              </span>
              <div
                class="flex ai-center gap-4 opacity-0"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.045 7.278c-1.097-2.804-3.083-4.584-5.573-4.997-3.588-.594-6.375-.252-8.5 1.078-1.829 1.133-2.734 2.715-3.327 3.775l-.07.108c-1.706 3.02-2.037 6.22-.94 9.24.75 2.103 2.247 3.703 4.337 4.62 1.341.592 2.909.898 4.546.898.488 0 .975-.018 1.463-.072 2.003-.216 3.989-.88 5.556-1.887 1.829-1.205 2.944-2.733 3.222-4.44.488-2.984.227-5.932-.714-8.323Zm-.836 8.053c-.244 1.564-1.498 2.678-2.508 3.326-1.358.88-3.1 1.474-4.894 1.653-3.31.36-7.35-.593-8.709-4.386-.94-2.57-.662-5.195.802-7.82l.07-.125c.54-.97 1.288-2.301 2.803-3.254 1.777-1.114 4.215-1.402 7.438-.862 2.473.43 3.744 2.426 4.389 4.026.818 2.085 1.045 4.8.61 7.442"
                      fill="#333"
                    />
                    <path
                      d="M18.102 12.221h-5.278V6.775a.793.793 0 0 0-.783-.81.793.793 0 0 0-.784.81v6.255c0 .45.348.809.784.809h6.06c.436 0 .785-.36.785-.809a.793.793 0 0 0-.784-.809"
                      fill="#333"
                    />
                  </svg>
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  false min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-id="D3SATI3N45FQTB5PYSC7TRFTTU"
              data-modal="open-modal"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 w-20_lg --dark"
              >
                <svg
                  fill="none"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.172 22a.754.754 0 0 1-.515-.19l-5.848-4.743-7.54 4.8a.797.797 0 0 1-.846.019.87.87 0 0 1-.423-.743V2.857C4 2.381 4.368 2 4.828 2h14.344c.46 0 .828.38.828.857v18.286a.851.851 0 0 1-.828.857"
                    fill="#333"
                  />
                </svg>
              </i>
              <span
                class="uppercase lg-only"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
  </div>
</div>
`;

exports[`Components - features - CardFoodit should test CardFoodit - variant note 1`] = `
<div>
  <div
    class="hidden"
  >
    <article
      class="card overflow-hidden relative h-100 w-100 max-w-1366 mx-auto border border-all border-thin border-light-100 bg-background-positive"
      data-variant="note"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container flex-column row-gap-0 column-gap-32 h-100 text-inherit"
        data-variant="primary"
        href="/guia-de-cocina/ficha-nota-foodit-nid18092023/"
        target="_self"
        title="Ficha nota FOODIT"
      >
        <div
          class="relative w-100 px-16 pt-16 pb-4"
        >
          <div
            class="foodit-placeholder card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/Spw-P_Ze--P3HO9SaTYjxuMlPNw=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/YXS2J3YI7ZFWJC5I3ECOTV45O4.jpg"
              />
              <img
                class="image flex card-image ratio-3-2 w-100"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/6r_NB8wBXa3ot_VbRpyo3ypij9Q=/1920x0/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/YXS2J3YI7ZFWJC5I3ECOTV45O4.jpg"
              />
            </picture>
          </div>
          
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 jc-between gap-16 px-16 pb-16 pt-20 text-light-800"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <span
                class="text card-title prumo transition-regular text-ellipsis-3 prumo-medium text-20"
              >
                Ficha nota FOODIT
              </span>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Foodit
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.045 7.278c-1.097-2.804-3.083-4.584-5.573-4.997-3.588-.594-6.375-.252-8.5 1.078-1.829 1.133-2.734 2.715-3.327 3.775l-.07.108c-1.706 3.02-2.037 6.22-.94 9.24.75 2.103 2.247 3.703 4.337 4.62 1.341.592 2.909.898 4.546.898.488 0 .975-.018 1.463-.072 2.003-.216 3.989-.88 5.556-1.887 1.829-1.205 2.944-2.733 3.222-4.44.488-2.984.227-5.932-.714-8.323Zm-.836 8.053c-.244 1.564-1.498 2.678-2.508 3.326-1.358.88-3.1 1.474-4.894 1.653-3.31.36-7.35-.593-8.709-4.386-.94-2.57-.662-5.195.802-7.82l.07-.125c.54-.97 1.288-2.301 2.803-3.254 1.777-1.114 4.215-1.402 7.438-.862 2.473.43 3.744 2.426 4.389 4.026.818 2.085 1.045 4.8.61 7.442"
                      fill="#333"
                    />
                    <path
                      d="M18.102 12.221h-5.278V6.775a.793.793 0 0 0-.783-.81.793.793 0 0 0-.784.81v6.255c0 .45.348.809.784.809h6.06c.436 0 .785-.36.785-.809a.793.793 0 0 0-.784-.809"
                      fill="#333"
                    />
                  </svg>
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  7 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-id="FMLGIYTL2ZBCRAKQTSO27CCQ6U"
              data-modal="open-modal"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <svg
                  fill="none"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.172 22a.754.754 0 0 1-.515-.19l-5.848-4.743-7.54 4.8a.797.797 0 0 1-.846.019.87.87 0 0 1-.423-.743V2.857C4 2.381 4.368 2 4.828 2h14.344c.46 0 .828.38.828.857v18.286a.851.851 0 0 1-.828.857M5.655 3.714V19.62l6.768-4.305a.78.78 0 0 1 .938.057l4.965 4.02V3.714H5.656Z"
                    fill="#333"
                  />
                </svg>
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
  </div>
</div>
`;

exports[`Components - features - CardFoodit should test CardFoodit - variant recipe 1`] = `
<div>
  <div
    class="hidden"
  >
    <article
      class="card overflow-hidden relative h-100 w-100 max-w-1366 mx-auto border border-all border-thin border-light-100 bg-light-1"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container flex-column row-gap-0 column-gap-32 h-100 text-inherit"
        data-variant="primary"
        href="/salados/pollo/receta-para-comer-mas-rico-con-pollito-2-nid18092023/"
        target="_self"
        title="Receta para comer mas rico con ...POLLITO 2"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://www.lanacion.com.ar/resizer/UGjxrx8lNRZ4UUUncPnYY8j_pTA=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
              <img
                class="image flex card-image ratio-3-2 w-100"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://www.lanacion.com.ar/resizer/HYbSynyGCPurUAS4sNRW1i0qXyI=/768x0/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
            </picture>
          </div>
          <span
            class="inline-flex ai-center gap-4 py-2 px-16 bg-accent-vino text-light-1 text-12 roboto-bold uppercase absolute bottom-0 left-0 translate-y-50"
          >
            FÁCIL
          </span>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 jc-between gap-16 px-16 pb-16 pt-20 text-light-800"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <span
                class="text card-title prumo transition-regular text-ellipsis-3 prumo-medium text-20"
              >
                Receta para comer mas rico con ...POLLITO 2
              </span>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Foodit
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <svg
                    fill="none"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.045 7.278c-1.097-2.804-3.083-4.584-5.573-4.997-3.588-.594-6.375-.252-8.5 1.078-1.829 1.133-2.734 2.715-3.327 3.775l-.07.108c-1.706 3.02-2.037 6.22-.94 9.24.75 2.103 2.247 3.703 4.337 4.62 1.341.592 2.909.898 4.546.898.488 0 .975-.018 1.463-.072 2.003-.216 3.989-.88 5.556-1.887 1.829-1.205 2.944-2.733 3.222-4.44.488-2.984.227-5.932-.714-8.323Zm-.836 8.053c-.244 1.564-1.498 2.678-2.508 3.326-1.358.88-3.1 1.474-4.894 1.653-3.31.36-7.35-.593-8.709-4.386-.94-2.57-.662-5.195.802-7.82l.07-.125c.54-.97 1.288-2.301 2.803-3.254 1.777-1.114 4.215-1.402 7.438-.862 2.473.43 3.744 2.426 4.389 4.026.818 2.085 1.045 4.8.61 7.442"
                      fill="#333"
                    />
                    <path
                      d="M18.102 12.221h-5.278V6.775a.793.793 0 0 0-.783-.81.793.793 0 0 0-.784.81v6.255c0 .45.348.809.784.809h6.06c.436 0 .785-.36.785-.809a.793.793 0 0 0-.784-.809"
                      fill="#333"
                    />
                  </svg>
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  4 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-id="D3SATI3N45FQTB5PYSC7TRFTTU"
              data-modal="open-modal"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <svg
                  fill="none"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.172 22a.754.754 0 0 1-.515-.19l-5.848-4.743-7.54 4.8a.797.797 0 0 1-.846.019.87.87 0 0 1-.423-.743V2.857C4 2.381 4.368 2 4.828 2h14.344c.46 0 .828.38.828.857v18.286a.851.851 0 0 1-.828.857M5.655 3.714V19.62l6.768-4.305a.78.78 0 0 1 .938.057l4.965 4.02V3.714H5.656Z"
                    fill="#333"
                  />
                </svg>
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
  </div>
</div>
`;

exports[`Components - features - CardFoodit with isAdmin, should return WarningMessage without noteId 1`] = `
<div>
  <article
    data-feature-id="f0f1sPQ6tYQr7ye"
  >
    <div
      style="margin-top: 10px; margin-bottom: 10px; width: 100%;"
    >
      <div
        class="mod-warning --warning"
      >
        <h2
          class="title"
        >
          Advertencia
        </h2>
        <p
          class="text"
        >
          El campo Id de la Nota es obligatorio.
        </p>
      </div>
    </div>
  </article>
</div>
`;
